fixed layout issues and other bugs

--- a/client/src/Project/components/TestCreatorSection/ReturnTab/ReturnTab.scss
+++ b/client/src/Project/components/TestCreatorSection/ReturnTab/ReturnTab.scss
@@ -1,4 +1,4 @@
 .return-value-tab-wrapper {
-  height: 32vh;
+  //height: 32vh;
   overflow-y: auto;
 }
