--- a/client/src/Project/components/TestCreatorSection/TestCreatorSection.scss
+++ b/client/src/Project/components/TestCreatorSection/TestCreatorSection.scss
@@ -1,8 +1,16 @@
 .test-creator-section-wrapper {
   padding: 10px 10px;
+  min-height: 40vh;
 
-  //height: 40vh;
-  //overflow-y: auto;
+}
 
+.test-creator-section-wrapper-content {
+  overflow-y: auto;
+}
+
+.test-creator-section-info {
+  height: 50vh;
+  width: 30vw;
+  padding:  20px;
 
 }
